ambiente de desarrollo

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 <body>
 	<div class="slider-wrapper theme-mi-slider">
 		<div id="slider" class="nivoSlider">     
-		    <img src="img/1.jpg" alt="" title="#htmlcaption1" />    
+		    <img src="https://imagenes2.blob.core.windows.net/csasda/1.jpg" alt="" title="#htmlcaption1" />    
 		    <img src="img/2.jpg" alt="" title="#htmlcaption2" />    
 		    <img src="img/3.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
-		    <h1>Sean Bienvenidos</h1>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		    <h1>Hola</h1>
+		    <p>From CodyTron.</p>
 		</div>
 		<div id="htmlcaption2" class="nivo-html-caption">     
-		    <h1>Acerca de Nosotros</h1>
+		    <h1>Trabajo de TI</h1>
 		</div>
 		<div id="htmlcaption3" class="nivo-html-caption">     
-		    <h1>Gracias por visitar</h1>
+		    <h1>Camilo, Brayan y Carlos </h1>
 		</div>
 	</div>
 </body>
