ambiente de desarrollo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="slider-wrapper theme-mi-slider">
 		<div id="slider" class="nivoSlider">     
-		    <img src="https://imagenes2.blob.core.windows.net/csasda/1.jpg" alt="" title="#htmlcaption1" />    
+		    <img src="https://imagenes2.blob.core.windows.net/nuevo/1.jpg" alt="" title="#htmlcaption1" />    
 		    <img src="img/2.jpg" alt="" title="#htmlcaption2" />    
 		    <img src="img/3.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
