ambiente de desarrollo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Nivo Slider</title>
+	<title>Taller TI</title>
 
 	<link rel="stylesheet" href="css/nivo-slider.css">
 	<link rel="stylesheet" href="css/mi-slider.css">
@@ -19,13 +19,13 @@
 <body>
 	<div class="slider-wrapper theme-mi-slider">
 		<div id="slider" class="nivoSlider">     
-		    <img src="https://imagenes2.blob.core.windows.net/nuevo/1.jpg" alt="" title="#htmlcaption1" />    
-		    <img src="img/2.jpg" alt="" title="#htmlcaption2" />    
-		    <img src="img/3.jpg" alt="" title="#htmlcaption3" />     
+		    <img src="https://images4.alphacoders.com/936/936378.jpg" alt="" title="#htmlcaption1" />    
+		    <img src="https://i.pinimg.com/originals/a7/fc/aa/a7fcaa43650adc892c401956a08dc32a.jpg" alt="" title="#htmlcaption2" />    
+		    <img src="https://wow.zamimg.com/uploads/screenshots/normal/980482.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
 		    <h1>Hola</h1>
-		    <p>From CodyTron.</p>
+		    <p>Mundo</p>
 		</div>
 		<div id="htmlcaption2" class="nivo-html-caption">     
 		    <h1>Trabajo de TI</h1>
