--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Taller TI hola brayan</title>
+	<title>Taller TI chao brayan</title>
 
 	<link rel="stylesheet" href="css/nivo-slider.css">
 	<link rel="stylesheet" href="css/mi-slider.css">
