Mejora fundamental para el proyecto

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 		    <img src="https://wow.zamimg.com/uploads/screenshots/normal/980482.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
-		    <h1>Hola</h1>
-		    <p>Mundo</p>
+		    <h1>¡¡¡Soy un cacahuate!!!</h1>
 		</div>
 		<div id="htmlcaption2" class="nivo-html-caption">     
 		    <h1>Trabajo de TI</h1>
