Hecho todo por Camilo

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <body>
 	<div class="slider-wrapper theme-mi-slider">
 		<div id="slider" class="nivoSlider">     
-		    <img src="https://images4.alphacoders.com/936/936378.jpg" alt="" title="#htmlcaption1" />    
-		    <img src="https://i.pinimg.com/originals/a7/fc/aa/a7fcaa43650adc892c401956a08dc32a.jpg" alt="" title="#htmlcaption2" />    
-		    <img src="https://wow.zamimg.com/uploads/screenshots/normal/980482.jpg" alt="" title="#htmlcaption3" />     
+		    <img src="https://imagenes2.blob.core.windows.net/nuevo/936378.jpg" alt="" title="#htmlcaption1" /> <img src="https://imagenes2.blob.core.windows.net/nuevo/a7fcaa43650adc892c401956a08dc32a.jpg" alt="" title="#htmlcaption2" />    
+		    <img src="https://imagenes2.blob.core.windows.net/nuevo/3.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
 		    <h1>Hola</h1>
