--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		    <img src="https://imagenes2.blob.core.windows.net/nuevo/3.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
-		    <h1>¡¡¡Soy un cacahuate!!!</h1>
+		    <h1>¡¡¡Final PROYECT!!!</h1>
 		</div>
 		<div id="htmlcaption2" class="nivo-html-caption">     
-		    <h1>Trabajo de TI</h1>
+		    <h1>Trabajo de TI FINAL</h1>
 		</div>
 		<div id="htmlcaption3" class="nivo-html-caption">     
-		    <h1>Camilo, Brayan y Carlos </h1>
+		    <h1>Camilo, Brayan y Carlos Y YO</h1>
 		</div>
 	</div>
 </body>
