--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="slider-wrapper theme-mi-slider">
 		<div id="slider" class="nivoSlider">     
-		    <img src="https://imagenes2.blob.core.windows.net/nuevo/936378.jpg" alt="" title="#htmlcaption1" /> <img src="https://imagenes2.blob.core.windows.net/nuevo/a7fcaa43650adc892c401956a08dc32a.jpg" alt="" title="#htmlcaption2" />    
+		    <img src="https://imagenes2.blob.core.windows.net/nuevo/descarga.jpg" alt="" title="#htmlcaption1" /> <img src="https://imagenes2.blob.core.windows.net/nuevo/a7fcaa43650adc892c401956a08dc32a.jpg" alt="" title="#htmlcaption2" />    
 		    <img src="https://imagenes2.blob.core.windows.net/nuevo/3.jpg" alt="" title="#htmlcaption3" />     
 		</div> 
 		<div id="htmlcaption1" class="nivo-html-caption">     
